--- a/project/src/main/resources/static/css/posts.css
+++ b/project/src/main/resources/static/css/posts.css
@@ -20,6 +20,7 @@
     height: 240px;
     border-bottom: 1px solid var(--var-color-border-transwhite);
     padding: 10px;
+    overflow: clip;
 }
 
 .post_body_link {
